--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
 # Core
 python-dotenv==1.0.0
-pandas==2.1.4
-numpy==1.26.2
+pandas
+numpy
 
 # Alpaca API
 alpaca-py==0.13.3
@@ -11,9 +11,9 @@ websocket-client==1.7.0
 requests==2.31.0
 aiohttp==3.9.1
 
-# Database
-sqlalchemy==2.0.23
-psycopg2-binary==2.9.9
+# Database (optional - install if needed)
+# sqlalchemy==2.0.23
+# psycopg2-binary==2.9.9
 
 # Telegram
 python-telegram-bot==20.7
@@ -22,9 +22,9 @@ python-telegram-bot==20.7
 ta==0.11.0
 yfinance==0.2.33
 
-# AI/ML
-openai==1.6.1
-anthropic==0.8.1
+# AI/ML (optional - install when needed)
+# openai==1.6.1
+# anthropic==0.8.1
 
 # Utils
 pytz==2023.3
