--- a/requirements.txt
+++ b/requirements.txt
@@ -16,7 +16,7 @@ aiohttp==3.9.1
 # psycopg2-binary==2.9.9
 
 # Telegram
-python-telegram-bot==20.7
+python-telegram-bot[all]==21.10
 
 # Technical Analysis
 ta==0.11.0
