--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -66,7 +66,7 @@ jobs:
         echo "🚀 Deploying trading bot..."
         
         # Create .env file with secrets
-        cat > /tmp/bot.env << 'ENVEOF'
+        cat > /tmp/bot.env << ENVEOF
 # Alpaca API Credentials  
 ALPACA_API_KEY=${{ secrets.ALPACA_API_KEY }}
 ALPACA_SECRET_KEY=${{ secrets.ALPACA_SECRET_KEY }}
